--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -213,7 +213,7 @@ jobs:
         make defconfig
 
     - name: SSH远程连接服务器
-      uses: db-one/debugger-action@main
+      uses: csexton/debugger-action@master
       if: env.SSH_ACTIONS == 'true' || (github.event.inputs.SSH_ACTION == 'true')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
